appointments and history views made

--- a/medicare/records/templates/front_desk.html
+++ b/medicare/records/templates/front_desk.html
@@ -19,6 +19,7 @@
                     <li><a href="{% url 'records:newappointment' %}">new appointment </a></li>
                     <li><a href="{% url 'records:newhistory' %}">new history</a></li>
                     <li><a href="{% url 'records:cancelapp' %}">cancel appointment</a></li>
+                    <li><a href="{% url 'records:appointments' %}">appointments</a></li>
                 </ul>
             </nav>
         </header>
