--- a/medicare/records/templates/records/current_appointments.html
+++ b/medicare/records/templates/records/current_appointments.html
@@ -15,12 +15,12 @@
 
                 <tr>
                     <td>{{ a.appointment_time }}</td>
-                    <td>{{ a.patient }}</td>
+                    <td><a href="{% url 'records:displayhistory' a.id %}">{{ a.patient }}</a></td>
                     <td>{{ a.visit_reason }}</td>
                     <td>{{ a.doctor }}</td>
-                    <td><a href="{% url 'records:newhistory' a.id %}">Update</a></td>
-                    <td><a href="{% url 'records:displayhistory' a.id %}">History</a></td>
+                    <td><a href="{% url 'records:updatehistory' a.id %}">Update</a></td>
                     <td><a href="#">Lab</a></td>
+                    <td><a href="{% url 'records:cancelapp' a.id %}">Cancel</a></td>
                 </tr>
         {% endfor %}
     </table>
@@ -36,12 +36,12 @@
             <tr>
                 <td>{{ a.appointment_date }}</td>
                 <td>{{ a.appointment_time }}</td>
-                <td>{{ a.patient }}</td>
+                <td><a href="{% url 'records:displayhistory' a.id %}">{{ a.patient }}</a></td>
                 <td>{{ a.visit_reason }}</td>
                 <td>{{ a.doctor }}</td>
-                <td><a href="{% url 'records:newhistory' a.id %}">Update</a></td>
-                <td><a href="{% url 'records:displayhistory' a.id %}">History</a></td>
+                <td><a href="{% url 'records:updatehistory' a.id %}">Update</a></td>
                 <td><a href="#">Lab</a></td>
+                <td><a href="{% url 'records:cancelapp' a.id %}">Cancel</a></td>
             </tr>
         {% endfor %}
     </table>
