--- a/medicare/records/templates/records/custom_form.html
+++ b/medicare/records/templates/records/custom_form.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div>
-    <form  method="get" >
+    <form method="get" >{% csrf_token %}
         <fieldset>
             <legend>{{ name }}</legend>
             <input type="checkbox" name="precription">Prescription<br>
