--- a/medicare/login/templates/login/index.html
+++ b/medicare/login/templates/login/index.html
@@ -15,11 +15,11 @@
       
     </div>
     <div class="col-sm-8 text-left"> 
-      <h1>Welcome</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <h1>Welcome to Medicare System</h1>
+      <p>On behalf of our employee team, medical staff and the many volunteers of Medicare Health System, I want to welcome you to our website. I understand how challenging making the best health care choices for you and your family can be and we thank you for choosing Medicare. </p>
       <hr>
-      <h3>Test</h3>
-      <p>Lorem ipsum...</p>
+      <h3>Join US</h3>
+      <p>In Emergency Call 911</p>
     </div>
     <div class="col-sm-2 sidenav">
      
