--- a/medicare/pharmacist/templates/pharmacist/ph_desk.html
+++ b/medicare/pharmacist/templates/pharmacist/ph_desk.html
@@ -21,7 +21,7 @@
 			    <thead>
 			      <tr>
 			         <th> ID </th>
-                	 <th> Patient Name </th>
+                	 <th> Doctor Name </th>
                      <th> Prescription ID </th>
 			      </tr>
 			    </thead>
