--- a/medicare/doctors/templates/doctors/add_lab.html
+++ b/medicare/doctors/templates/doctors/add_lab.html
@@ -19,15 +19,28 @@
 		<h2>Add new Lab</h2>
         <form class="form-horizontal"  method="post" id="carform">
        {% csrf_token %}
-       {% for field in record %}
+       
+     
+        <input type="hidden" name="patient_id" maxlength="5"  value="{{patient_id}}" id="id_patient_id" />
+      	
+        <input type="hidden" name="doctor_id" maxlength="5"  value="{{doctor_id}}" id="id_doctor_id" />
+      
+    	
+      
     	<div class="form-group">
-      		<label class="control-label col-sm-2">{{ field.label_tag }}</label>
+      		<label class="control-label col-sm-2">{{ record.test_date.label_tag }}</label>
       		<div class="col-xs-3">
-        		{{field}}
+        		{{record.test_date}}
       		</div>
     	</div>
-    	
-      {% endfor %}
+    	<div class="form-group">
+      		<label class="control-label col-sm-2"><label for="id_test_id">Test id:</label></label>
+      		<div class="col-xs-3">
+        		<input type="text" name="test_id" maxlength="5"  required id="id_test_id" />
+      		</div>
+    	</div>
+ 
+     
     	<div class="form-group">        
       		<div class="col-sm-offset-2 col-sm-10">
         		<button type="submit" class="btn btn-default">Submit</button>
