--- a/medicare/doctors/templates/doctors/add_prescription.html
+++ b/medicare/doctors/templates/doctors/add_prescription.html
@@ -19,15 +19,18 @@
 		<h2>Add new Prescription</h2>
         <form class="form-horizontal"  method="post" id="carform">
        {% csrf_token %}
-       {% for field in record %}
+        <input type="hidden" name="prescribedBy" maxlength="5"  value="{{doctor_id}}" id="id_prescribedBy" />
+      	
+        <input type="hidden" name="patient_id" maxlength="5"  value="{{patient_id}}" id="id_patient_id" />
+     
+    	
+      
     	<div class="form-group">
-      		<label class="control-label col-sm-2" for="username">{{ field.label_tag }}</label>
+      		<label class="control-label col-sm-2">{{ record.drug_name.label_tag }}</label>
       		<div class="col-xs-3">
-        		{{field}}
+        		{{record.drug_name}}
       		</div>
     	</div>
-    	
-      {% endfor %}
     	<div class="form-group">        
       		<div class="col-sm-offset-2 col-sm-10">
         		<button type="submit" class="btn btn-default">Submit</button>
