--- a/medicare/login/templates/login/login.html
+++ b/medicare/login/templates/login/login.html
@@ -13,37 +13,49 @@
 <div class="row content">
     <div class="col-sm-2 sidenav">
     </div>
-    <div class="col-sm-8 text-left" > 
-		<h2>Login Page</h2>
-        <form class="form-horizontal" action=" {% url 'login:auth' %}" method="post" id="carform">
+    <div class="col-sm-8" >
+		<h2 align="center">Login </h2>
+		<hr>
+        <form class="form-horizontal" action=" {% url 'login:auth' %}" method="post" id="carform" >
        {% csrf_token %}
     	<div class="form-group">
-      		<label class="control-label col-sm-2" for="username">Username:</label>
-      		<div class="col-xs-3">
-        		<input type="text" class="form-control" id="username" placeholder="Enter username" name="username" required>
-      		</div>
+			<div class="row">
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+				<div class="form-group input-group col-xs-4 col-sm-4 col-md-4">
+            		<span class="input-group-addon "><i class="glyphicon glyphicon-user"></i></span>
+            		<input type="text" class="form-control" id="username" placeholder="Enter username" name="username" required>
+		      	</div>
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+			</div>
     	</div>
     	<div class="form-group">
-      		<label class="control-label col-sm-2" for="pwd">Password:</label>
-      		<div class="col-xs-3">          
-        		<input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pwd" required>
-      		</div>
+			<div class="row">
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+				<div class="form-group input-group col-xs-4 col-sm-4 col-md-4">
+            		<span class="input-group-addon "><i class="glyphicon glyphicon-user"></i></span>
+            		<input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pwd" required>
+		      	</div>
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+			</div>
     	</div>
-    
-    	<div class="form-group">        
-      		<div class="col-sm-offset-2 col-sm-10">
-        		<button type="submit" class="btn btn-default">Submit</button>
-      		</div>
+    	
+    	<div class="form-group">
+			<div class="row">
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+				<div class="form-group input-group col-xs-4 col-sm-4 col-md-4">
+            		<button type="submit" class="btn btn-default">Login</button>	
+            	</div>
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+			</div>
     	</div>
-   		<div class="form-group">        
+    	
+   		<div class="form-group">
       		<div class="col-sm-offset-2 col-sm-10">
-      		
         		<b style="color: red">{{error}}</b>
       		</div>
     	</div>
   	</form>
     </div>
- 
 	<div class="col-sm-2 sidenav">
      </div>
 </div>
