--- a/medicare/employees/templates/employees/add_employee.html
+++ b/medicare/employees/templates/employees/add_employee.html
@@ -16,22 +16,31 @@
     <div class="col-sm-2 sidenav">
     </div>
     <div class="col-sm-8 text-left" > 
-		<h2>New Employee</h2>
+		<h2 align="center">New Employee</h2>
+		<hr>
         <form class="form-horizontal"  method="post" id="carform">
        {% csrf_token %}
        {% for field in record %}
-    	<div class="form-group">
-      		<label class="control-label col-sm-2" for="username">{{ field.label_tag }}</label>
-      		<div class="col-xs-3">
-        		{{field}}
-      		</div>
-    	</div>
+    
     	
-      {% endfor %}
-    	<div class="form-group">        
-      		<div class="col-sm-offset-2 col-sm-10">
-        		<button type="submit" class="btn btn-default">Submit</button>
-      		</div>
+    	
+			<div class="row">
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+				<div class="form-group input-group col-xs-4 col-sm-4 col-md-4">
+            		<span class="input-group-addon ">{{ field.label_tag }}</span>
+            		<b class="input-group-addon">{{field}}</b>
+            	</div>
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+			</div>
+          {% endfor %}
+    	<div class="form-group">
+			<div class="row">
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+				<div class="form-group input-group col-xs-4 col-sm-4 col-md-4">
+            		<button type="submit" class="btn btn-default">Save</button>	
+            	</div>
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+			</div>
     	</div>
    		<div class="form-group">   
    		     
