--- a/medicare/doctors/templates/doctors/add_lab.html
+++ b/medicare/doctors/templates/doctors/add_lab.html
@@ -16,7 +16,8 @@
     <div class="col-sm-2 sidenav">
     </div>
     <div class="col-sm-8 text-left" > 
-		<h2>Add new Lab</h2>
+		<h2 align="center">New Lab</h2>
+		<hr>
         <form class="form-horizontal"  method="post" id="carform">
        {% csrf_token %}
        
@@ -25,26 +26,36 @@
       	
         <input type="hidden" name="doctor_id" maxlength="5"  value="{{doctor_id}}" id="id_doctor_id" />
       
+    
+    	<div class="row">
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+				<div class="form-group input-group col-xs-4 col-sm-4 col-md-4">
+            		<span class="input-group-addon ">{{ record.test_date.label_tag }}</span>
+            		<b class="input-group-addon">{{record.test_date}}</b>
+            	</div>
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+		</div>
+		
     	
-      
-    	<div class="form-group">
-      		<label class="control-label col-sm-2">{{ record.test_date.label_tag }}</label>
-      		<div class="col-xs-3">
-        		{{record.test_date}}
-      		</div>
-    	</div>
-    	<div class="form-group">
-      		<label class="control-label col-sm-2"><label for="id_test_id">Test id:</label></label>
-      		<div class="col-xs-3">
-        		<input type="text" name="test_id" maxlength="5"  required id="id_test_id" />
-      		</div>
-    	</div>
  
-     
-    	<div class="form-group">        
-      		<div class="col-sm-offset-2 col-sm-10">
-        		<button type="submit" class="btn btn-default">Submit</button>
-      		</div>
+     	<div class="row">
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+				<div class="form-group input-group col-xs-4 col-sm-4 col-md-4">
+            		<span class="input-group-addon ">Test id:</span>
+            		<b class="input-group-addon"><input type="text" name="test_id" maxlength="5"  required id="id_test_id" /></b>
+            	</div>
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+		</div>
+		
+    		<div class="form-group">
+			<div class="row">
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+				<div class="form-group input-group col-xs-4 col-sm-4 col-md-4">
+				
+            		<button type="submit" class="btn btn-default">Save</button>	
+            	</div>
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+			</div>
     	</div>
    		<div class="form-group">        
       		<div class="col-sm-offset-2 col-sm-10">
