--- a/medicare/doctors/templates/doctors/add_prescription.html
+++ b/medicare/doctors/templates/doctors/add_prescription.html
@@ -16,7 +16,8 @@
     <div class="col-sm-2 sidenav">
     </div>
     <div class="col-sm-8 text-left" > 
-		<h2>Add new Prescription</h2>
+		<h2 align="center">New Prescription</h2>
+		<hr>
         <form class="form-horizontal"  method="post" id="carform">
        {% csrf_token %}
         <input type="hidden" name="prescribedBy" maxlength="5"  value="{{doctor_id}}" id="id_prescribedBy" />
@@ -25,17 +26,26 @@
      
     	
       
+    
+    	<div class="row">
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+				<div class="form-group input-group col-xs-4 col-sm-4 col-md-4">
+            		<span class="input-group-addon ">{{ record.drug_name.label_tag }}</span>
+            		<b class="input-group-addon">{{record.drug_name}}</b>
+            	</div>
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+		</div>
+		
     	<div class="form-group">
-      		<label class="control-label col-sm-2">{{ record.drug_name.label_tag }}</label>
-      		<div class="col-xs-3">
-        		{{record.drug_name}}
-      		</div>
-    	</div>
-    	<div class="form-group">        
-      		<div class="col-sm-offset-2 col-sm-10">
-        		<button type="submit" class="btn btn-default">Submit</button>
-      		</div>
-    	</div>
+			<div class="row">
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+				<div class="form-group input-group col-xs-4 col-sm-4 col-md-4">
+				
+            		<button type="submit" class="btn btn-default">Save</button>	
+            	</div>
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+			</div>
+		</div>
    		<div class="form-group">        
       		<div class="col-sm-offset-2 col-sm-10">
       		
