--- a/medicare/employees/templates/employees/delete_employee.html
+++ b/medicare/employees/templates/employees/delete_employee.html
@@ -16,26 +16,35 @@
     <div class="col-sm-2 sidenav">
     </div>
     <div class="col-sm-8 text-left" > 
-		<h2>Delete Employee</h2>
+		<h2 align="center">Delete Employee</h2>
+		<hr>
         <form class="form-horizontal"  action="{% url 'employees:deleteemployee' %}" method="get" id="carform">
        {% csrf_token %}
        
     
-      <div class="form-group">
-      		<label class="control-label col-sm-2" for="employee">Select list (select one):</label>
-      		<div class="col-xs-3">
-	      		<select class="form-control" id="employee" form="carform" name="employee">
-	      		{% for field in employees %}
-	      		<option value="{{field}}">{{field}}</option>
-	        	 {% endfor %}
-	      		</select>
-      		</div>
-      	</div>
-     
-    	<div class="form-group">        
-      		<div class="col-sm-offset-2 col-sm-10">
-        		<button type="submit" class="btn btn-default">Submit</button>
-      		</div>
+     	<div class="row">
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+				<div class="form-group input-group col-xs-4 col-sm-4 col-md-4">
+            		<span class="input-group-addon " for="employee">Select</span>
+            		<b class="input-group-addon">
+            		<select id="employee" form="carform" name="employee">
+	      				{% for field in employees %}
+	      				<option value="{{field}}">{{field}}</option>
+	        			 {% endfor %}
+	      			</select>
+            		</b>
+            	</div>
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+			</div>
+    	<div class="form-group">
+			<div class="row">
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+				<div class="form-group input-group col-xs-4 col-sm-4 col-md-4">
+					Sure you Want  to Delete?
+            		<button type="submit" class="btn btn-default">Delete</button>	
+            	</div>
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+			</div>
     	</div>
    		<div class="form-group">        
       		<div class="col-sm-offset-2 col-sm-10">
