--- a/medicare/records/templates/records/add_appoinment.html
+++ b/medicare/records/templates/records/add_appoinment.html
@@ -16,23 +16,30 @@
     <div class="col-sm-2 sidenav">
     </div>
     <div class="col-sm-8 text-left" > 
-		<h2>Add new Appoinment</h2>
+		<h2 align="center">Add new Appoinment</h2>
+		<hr>
         <form class="form-horizontal"  method="post" id="carform">
        {% csrf_token %}
        {% for field in record %}
-    	<div class="form-group">
-      		<label class="control-label col-sm-2">{{ field.label_tag }}</label>
-      		<div class="col-xs-3">
-        		{{field}}
-      		</div>
-    	</div>
+			<div class="row">
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+				<div class="form-group col-xs-4 col-sm-4 col-md-4">
+					<span class="input-group-addon ">{{ field.label_tag }}</span>
+					<span class="input-group-addon ">{{field}}</span>
+				</div>
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+			</div>
     	
       {% endfor %}
-    	<div class="form-group">        
-      		<div class="col-sm-offset-2 col-sm-10">
-        		<button type="submit" class="btn btn-default">Submit</button>
-      		</div>
-    	</div>
+			<div class="row">
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+				<div class="form-group col-xs-4 col-sm-4 col-md-4">
+					<div class="col-sm-offset-2 col-sm-10">
+						<button type="submit" class="btn btn-default">Submit</button>
+					</div>
+				</div>
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+			</div>
    		<div class="form-group">        
       		<div class="col-sm-offset-2 col-sm-10">
       		
