--- a/medicare/records/templates/records/cancel_admit.html
+++ b/medicare/records/templates/records/cancel_admit.html
@@ -16,26 +16,36 @@
     <div class="col-sm-2 sidenav">
     </div>
     <div class="col-sm-8 text-left" > 
-		<h2>Discharge Patient</h2>
+		<h2 align="center">Discharge Patient</h2>
+		<hr>
         <form class="form-horizontal"  action="{% url 'records:deladmit' %}" method="get" id="carform">
        {% csrf_token %}
       
-    
-      <div class="form-group">
-      		<label class="control-label col-sm-2" for="patient">Select list (select one):</label>
-      		<div class="col-xs-3">
-	      		<select class="form-control" id="patient" form="carform" name="patient">
-	      		{% for field in admits %}
-	      		<option value="{{field.patient_id}}">{{field.patient_id}}</option>
-	        	 {% endfor %}
-	      		</select>
-      		</div>
-      	</div>
-     
-    	<div class="form-group">        
-      		<div class="col-sm-offset-2 col-sm-10">
-        		<button type="submit" class="btn btn-default">Submit</button>
-      		</div>
+
+     <div class="row">
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+				<div class="form-group input-group col-xs-4 col-sm-4 col-md-4">
+            		<span class="input-group-addon ">select</span>
+            		<b class="input-group-addon">
+            		<select  id="patient" form="carform" name="patient">
+		      		{% for field in admits %}
+		      		<option value="{{field.patient_id}}">{{field.patient_id}}</option>
+		        	 {% endfor %}
+		      		</select>
+					</b>
+            	</div>
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+		</div>
+		
+    	<div class="form-group">
+			<div class="row">
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+				<div class="form-group input-group col-xs-4 col-sm-4 col-md-4">
+					Sure you want to Discharge patient?
+            		<button type="submit" class="btn btn-default">Save</button>	
+            	</div>
+				<div class="col-xs-4 col-sm-4 col-md-4"></div>
+			</div>
     	</div>
    		<div class="form-group">        
       		<div class="col-sm-offset-2 col-sm-10">
